--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 .top{
 
-    background-image: url("/assets/sackcloth-1280540_1920.jpg");
+    background-image: url("../assets/sackcloth-1280540_1920.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
